test/fail/basic_syntax/integer_implicit_new.lly
#[
SyntaxError: Class 'integer' has no ::new to implicitly use.
    from integer_implicit_new.lly:6
]#

var v = integer(10)
